--- a/resume/styles.css
+++ b/resume/styles.css
@@ -2,87 +2,154 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 
-.lesson2, .lesson3, .lesson4 {
-  margin-top: 10px;
-  padding: 10px 0px;
-  background-color: lightblue;
-  cursor: pointer;
-
-
+html {
+  scroll-behavior: smooth;
 }
 
-.expand-lesson2, .expand-lesson3, .expand-lesson4 {
-  display: none;
-  background-color: lightblue;
+/* body {
+  background: rgb(251,255,248);
+  background: linear-gradient(349deg, rgba(251,255,248,1) 0%, rgba(240,255,242,1) 100%);
+} */
 
 
-}
 
 .lesson {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10% 0px;
-  background-color: rgba(171, 247, 251);
   cursor: pointer;
-  margin-top: 7px;
-
+  margin-top: 10px;
 }
 
-.lesson:hover {
-    background-color: rgba(150, 213, 216);
-}
-
-
-.expand-lesson {
-  display: none;
-  min-height: 200px;
-  background-color: rgba(150, 213, 216);
+.details {
+  min-height: 95%;
   padding-left: 5px;
   padding-right: 5px;
   cursor: pointer;
+  margin-top: 10px;
 }
 
-.expand-lesson h4 {
+.details h4 {
+  text-align: center;
+}
+
+.s-hidden {
+  display: none;
+  /* background-color: rgba(171, 247, 251); */
+}
+
+.s-open {
+  /* background-color: rgba(171, 247, 251); */
+}
+
+
+.except {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+ .job {
+   padding: 10px 10px 0px 10px;
+   margin-bottom: 20px;
+   margin-top: 20px;
+
+ }
+
+ .title {
+   border-bottom: 1px solid #ECF0F1;
+ }
+
+ /* .experience {
+   background-color: #92CFFC;
+ } */
+
+
+.color1 {
+  background-color: rgba(184, 224, 254);
+}
+
+.color2 {
+  background-color: rgba(170, 213, 243);
+}
+
+.color2 {
+  background-color: rgba(146, 207, 252, 0.7);
+}
+
+.color3 {
+  background-color: rgba(140, 199, 241);
+}
+
+.color4 {
+  background-color: rgba(128, 183, 223);
+}
+
+.color5 {
+  background-color: rgba(210, 248, 228);
+}
+
+.color6 {
+  background-color: rgba(156, 243, 196);
+}
+
+.color7 {
+
+  background-color: rgba(143, 222, 179);
+}
+
+.color8 {
+  background-color: rgba(122, 191, 153);
+}
+
+.color1:hover, .color2:hover, .color3:hover,
+.color4:hover, .color5:hover, .color6:hover, .color7:hover, .color8:hover {
+  filter: grayscale(70%);
+}
+
+/* .experience {
+  border-top: 50px solid #245760;
+  background-color: rgba(217, 234, 238);
+  box-shadow: 0 1px 7px 0 rgba(0,0,0,0.2);
+  margin-bottom: 50px;
+}
+
+.experience h2 {
+  font-family: 'Francois One', sans-serif;
+  font-weight: 300;
+  font-size: 3rem;
   text-align: center;
   padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-/* .description {
-  background-color: lightblue;
+  margin-top: -64px;
+  color: rgba(217, 234, 238);
+  text-shadow: -2px -2px black;
 } */
 
-.test {
-
-}
-
-
-
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1rem;
+.experience h3 {
+  font-size: 1.2rem;
+  font-weight: 400;
 }
 
 h4 {
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 
 li {
   list-style-type: none;
+  list-style-position: inside;
+  font-size: .8rem;
 }
 
-ul {
-  margin-top: 0px;
-  padding-top: 0px;
+strong {
+  font-weight: 500;
 }
-h4 {
-  padding-bottom: 0px;
-  margin-bottom: 0px;
+
+footer {
+  width: 100%;
+  height:400px;
 }
