--- a/resume/styles.css
+++ b/resume/styles.css
@@ -109,7 +109,8 @@ html {
 
 .color1:hover, .color2:hover, .color3:hover,
 .color4:hover, .color5:hover, .color6:hover, .color7:hover, .color8:hover {
-  filter: grayscale(70%);
+  /* filter: grayscale(70%); */
+  background-color: rgba(99, 135, 171, 0.8);
 }
 
 /* .experience {
@@ -117,27 +118,89 @@ html {
   background-color: rgba(217, 234, 238);
   box-shadow: 0 1px 7px 0 rgba(0,0,0,0.2);
   margin-bottom: 50px;
-}
+} */
 
 .experience h2 {
-  font-family: 'Francois One', sans-serif;
+  /* font-family: 'Francois One', sans-serif;
   font-weight: 300;
   font-size: 3rem;
   text-align: center;
   padding-top: 10px;
   margin-top: -64px;
   color: rgba(217, 234, 238);
-  text-shadow: -2px -2px black;
-} */
+  text-shadow: -2px -2px black; */
+  padding-left: 20px;
+}
+
+.skills h2 {
+
+}
 
 .experience h3 {
   font-size: 1.2rem;
   font-weight: 400;
 }
 
-h4 {
+.experience h4 {
   font-size: 1.1rem;
+
 }
+
+.skills {
+
+}
+
+.skills h3 {
+  font-size: 1.2rem;
+  padding: 10px 0px;
+  font-weight: 500;
+}
+
+.skills h4 {
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+
+.web-skills {
+  /* border: 2px solid lightblue; */
+}
+
+.other-skills {
+  /* border: 2px solid lightblue; */
+
+}
+
+.rotate {
+  position: relative;
+  background-color: rgba(210, 248, 228, 0.8);
+  transform: rotate(-2deg);
+  padding: 20px;
+
+
+}
+
+.text {
+  position: relative;
+
+  transform: rotate(2deg);
+}
+
+.skill {
+  border: 1px solid lightgray;
+  box-shadow: 1px 2px #888888;
+  margin: 5px;
+  padding: 4px;
+  display: inline-block;
+  font-size: .8rem;
+  background-color: white;
+}
+
+.skills h4 {
+  font-size: .8rem;
+}
+
+
+
 
 li {
   list-style-type: none;
