--- a/resume/styles.css
+++ b/resume/styles.css
@@ -10,11 +10,69 @@ html {
   scroll-behavior: smooth;
 }
 
-/* body {
-  background: rgb(251,255,248);
-  background: linear-gradient(349deg, rgba(251,255,248,1) 0%, rgba(240,255,242,1) 100%);
-} */
+body {
+  background: rgb(253,255,252);
+background: linear-gradient(329deg, rgba(253,255,252,1) 0%, rgba(245,255,245,1) 100%);
+}
 
+nav a {
+  text-decoration: none;
+  color: black;
+}
+
+nav a:hover {
+  text-decoration: none;
+  color: black;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+
+}
+
+nav ul li {
+  padding: 0px 20px 2px 20px;
+  font-family: 'Lato', sans-serif;
+  margin-top: 19px;
+  font-size: 1rem;
+  border-bottom: 4px solid #245760;
+
+
+}
+
+nav ul li:hover {
+  border-bottom: 4px solid #DF0000;
+  transition: border-bottom, .2s;
+}
+
+.header-bg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 375px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  box-shadow: 0 1px 7px 0 rgba(0,0,0,0.2);
+  background-position: top;
+  transition: background-position 1.4s;
+  transition-timing-function: ease-in-out;
+  overflow: hidden;
+  background-image: url(images/rose.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.intro {
+  border: 7px solid white;
+  border-radius: 2px;
+  width: 90%;
+  min-height: 225px;
+  padding: 30px;
+  background-color: #E2FAFF;
+  box-shadow: 0 1px 10px 0 rgba(0,0,0,0.4);
+}
 
 
 .lesson {
@@ -39,11 +97,9 @@ html {
 
 .s-hidden {
   display: none;
-  /* background-color: rgba(171, 247, 251); */
 }
 
 .s-open {
-  /* background-color: rgba(171, 247, 251); */
 }
 
 
@@ -65,9 +121,6 @@ html {
    border-bottom: 1px solid #ECF0F1;
  }
 
- /* .experience {
-   background-color: #92CFFC;
- } */
 
 
 .color1 {
@@ -120,6 +173,27 @@ html {
   margin-bottom: 50px;
 } */
 
+.school {
+  background-color: lightblue;
+
+}
+
+.courses {
+  background-color: rgb(202, 241, 246);
+
+}
+
+.courses li {
+  list-style-type: disc;
+  list-style-position: inside;
+}
+
+h5 {
+  font-weight: 400;
+  font-size: .9rem;
+
+}
+
 .experience h2 {
   /* font-family: 'Francois One', sans-serif;
   font-weight: 300;
@@ -129,21 +203,26 @@ html {
   margin-top: -64px;
   color: rgba(217, 234, 238);
   text-shadow: -2px -2px black; */
-  padding-left: 20px;
+  padding-left: 18px;
 }
 
 .skills h2 {
 
 }
 
-.experience h3 {
+
+
+.experience h3, .education h3 {
   font-size: 1.2rem;
   font-weight: 400;
 }
 
-.experience h4 {
+.experience h4, .education h4 {
   font-size: 1.1rem;
+}
 
+.education h4 {
+  font-weight: 400;
 }
 
 .skills {
@@ -161,45 +240,42 @@ html {
   font-weight: 400;
 }
 
-.web-skills {
-  /* border: 2px solid lightblue; */
-}
-
-.other-skills {
-  /* border: 2px solid lightblue; */
-
-}
 
 .rotate {
   position: relative;
   background-color: rgba(210, 248, 228, 0.8);
+
   transform: rotate(-2deg);
   padding: 20px;
-
+  z-index: -1;
 
 }
 
 .text {
   position: relative;
-
+  z-index: 1;
   transform: rotate(2deg);
 }
 
 .skill {
   border: 1px solid lightgray;
-  box-shadow: 1px 2px #888888;
+  box-shadow: 1px 1px #A9A9A9;
   margin: 5px;
   padding: 4px;
   display: inline-block;
-  font-size: .8rem;
+  font-size: .9rem;
   background-color: white;
 }
 
 .skills h4 {
-  font-size: .8rem;
+  font-size: .9rem;
 }
 
 
+
+h2 {
+  /* font-family: 'Francois One', sans-serif; */
+}
 
 
 li {
@@ -216,3 +292,40 @@ footer {
   width: 100%;
   height:400px;
 }
+
+
+
+
+
+
+
+.education h2,  .experience h2 {
+  font-family: 'Francois One', sans-serif;
+  font-weight: 300;
+  font-size: 2.9rem;
+  text-align: center;
+  color: rgba(217, 234, 238);
+  /* text-shadow: 0px 2px black; */
+  background-color: #245760;
+}
+
+.skills h2 {
+  font-family: 'Francois One', sans-serif;
+  font-weight: 300;
+  font-size: 2.9rem;
+  width: 50%;
+  padding-left: 20px;
+  color: rgba(217, 234, 238);
+  /* text-shadow: 0px 2px black; */
+  background-color: #245760;
+  margin-bottom: 20px;
+}
+
+
+/*
+.education,  .experience {
+  border-top: 50px solid #245760;
+
+  box-shadow: 0 1px 7px 0 rgba(0,0,0,0.2);
+  margin-bottom: 50px;
+} */
