--- a/resume/styles.css
+++ b/resume/styles.css
@@ -2,20 +2,185 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
-/* body {
-  background: rgb(251,255,248);
-  background: linear-gradient(349deg, rgba(251,255,248,1) 0%, rgba(240,255,242,1) 100%);
-} */
+body {
+  background: rgb(253,255,252);
+  background: linear-gradient(329deg, rgba(253,255,252,1) 0%, rgba(245,255,245,1) 100%);
+
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
 
 
+
+
+ /* Nav Bar */
+
+nav a {
+  text-decoration: none;
+  color: black;
+}
+
+nav a:hover {
+  text-decoration: none;
+  color: black;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+
+}
+
+nav ul li {
+  padding: 0px 20px 2px 20px;
+  font-family: 'Lato', sans-serif;
+  margin-top: 19px;
+  font-size: 1rem;
+  border-bottom: 4px solid #245760;
+
+}
+
+nav ul li:hover {
+  border-bottom: 4px solid #DF0000;
+  transition: border-bottom, .2s;
+}
+
+
+
+
+ /* Header */
+
+.header-bg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 375px;
+  box-shadow: 0 1px 7px 0 rgba(0,0,0,0.2);
+  background-position: right;
+
+  overflow: hidden;
+  background-image: url(images/rose.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.intro {
+  border: 7px solid white;
+  border-radius: 2px;
+  width: 90%;
+  min-height: 225px;
+  padding: 30px;
+  background-color: #F2FDFF;
+  box-shadow: 0 1px 10px 0 rgba(0,0,0,0.4);
+}
+
+.intro h3 {
+  padding-left: 13px;
+  font-weight: 400;
+  font-size: 1.4rem;
+}
+
+
+
+
+
+ /* Main Content */
+ /* Education Section */
+
+ .school {
+   background-color: lightblue;
+ }
+
+ .courses {
+   background-color: rgb(202, 241, 246);
+ }
+
+ .courses li {
+   list-style-type: disc;
+   list-style-position: inside;
+ }
+
+ .courses h5 {
+   font-weight: 400;
+   font-size: .9rem;
+
+ }
+
+ .education h4 {
+   font-weight: 400;
+ }
+
+
+
+ .experience h3, .education h3 {
+   font-size: 1.2rem;
+   font-weight: 400;
+ }
+
+ .experience h4, .education h4 {
+   font-size: 1.1rem;
+ }
+
+
+
+
+ /* Skills Section */
+
+ .rotate {
+   position: relative;
+   background-color: rgba(210, 248, 228, 0.8);
+
+   transform: rotate(-2deg);
+   padding: 20px;
+   z-index: -1;
+
+ }
+
+ .text {
+   position: relative;
+   z-index: 1;
+   transform: rotate(2deg);
+ }
+
+ .skill {
+   border: 1px solid lightgray;
+   box-shadow: 1px 1px #A9A9A9;
+   margin: 5px;
+   padding: 4px;
+   display: inline-block;
+   font-size: .9rem;
+   background-color: white;
+ }
+
+
+ .skills h5 {
+   font-weight: 400;
+   font-size: .9rem;
+
+ }
+
+ .skills h3 {
+   font-size: 1.2rem;
+   padding: 10px 0px;
+   font-weight: 500;
+ }
+
+ .skills h4 {
+   font-size: 1.1rem;
+   font-weight: 400;
+ }
+
+
+
+
+
+ /* Work Experience Section */
 
 .lesson {
   display: flex;
@@ -39,13 +204,11 @@ html {
 
 .s-hidden {
   display: none;
-  /* background-color: rgba(171, 247, 251); */
 }
 
 .s-open {
-  /* background-color: rgba(171, 247, 251); */
-}
 
+}
 
 .except {
   display: flex;
@@ -65,154 +228,69 @@ html {
    border-bottom: 1px solid #ECF0F1;
  }
 
- /* .experience {
-   background-color: #92CFFC;
- } */
-
 
 .color1 {
-  background-color: rgba(184, 224, 254);
+  background-color: rgb(202, 241, 246);
 }
 
 .color2 {
-  background-color: rgba(170, 213, 243);
-}
-
-.color2 {
-  background-color: rgba(146, 207, 252, 0.7);
-}
-
-.color3 {
-  background-color: rgba(140, 199, 241);
-}
-
-.color4 {
-  background-color: rgba(128, 183, 223);
-}
-
-.color5 {
-  background-color: rgba(210, 248, 228);
-}
-
-.color6 {
-  background-color: rgba(156, 243, 196);
-}
-
-.color7 {
-
-  background-color: rgba(143, 222, 179);
-}
-
-.color8 {
-  background-color: rgba(122, 191, 153);
-}
-
-.color1:hover, .color2:hover, .color3:hover,
-.color4:hover, .color5:hover, .color6:hover, .color7:hover, .color8:hover {
-  /* filter: grayscale(70%); */
-  background-color: rgba(99, 135, 171, 0.8);
-}
-
-/* .experience {
-  border-top: 50px solid #245760;
-  background-color: rgba(217, 234, 238);
-  box-shadow: 0 1px 7px 0 rgba(0,0,0,0.2);
-  margin-bottom: 50px;
-} */
-
-.experience h2 {
-  /* font-family: 'Francois One', sans-serif;
-  font-weight: 300;
-  font-size: 3rem;
-  text-align: center;
-  padding-top: 10px;
-  margin-top: -64px;
-  color: rgba(217, 234, 238);
-  text-shadow: -2px -2px black; */
-  padding-left: 20px;
-}
-
-.skills h2 {
-
-}
-
-.experience h3 {
-  font-size: 1.2rem;
-  font-weight: 400;
-}
-
-.experience h4 {
-  font-size: 1.1rem;
-
-}
-
-.skills {
-
-}
-
-.skills h3 {
-  font-size: 1.2rem;
-  padding: 10px 0px;
-  font-weight: 500;
-}
-
-.skills h4 {
-  font-size: 1.1rem;
-  font-weight: 400;
-}
-
-.web-skills {
-  /* border: 2px solid lightblue; */
-}
-
-.other-skills {
-  /* border: 2px solid lightblue; */
-
-}
-
-.rotate {
-  position: relative;
-  background-color: rgba(210, 248, 228, 0.8);
-  transform: rotate(-2deg);
-  padding: 20px;
-
-
-}
-
-.text {
-  position: relative;
-
-  transform: rotate(2deg);
-}
-
-.skill {
-  border: 1px solid lightgray;
-  box-shadow: 1px 2px #888888;
-  margin: 5px;
-  padding: 4px;
-  display: inline-block;
-  font-size: .8rem;
-  background-color: white;
-}
-
-.skills h4 {
-  font-size: .8rem;
+  background-color: rgb(195, 248, 250);
 }
 
 
+.color1:hover, .color2:hover {
+  background-color: rgba(155, 190, 193, 0.7);
+}
 
-
-li {
+.details li {
   list-style-type: none;
   list-style-position: inside;
   font-size: .8rem;
 }
 
-strong {
-  font-weight: 500;
-}
+
+
+
+ /* Section Headings */
+
+ .education h2,  .experience h2 {
+   /* font-family: 'Francois One', sans-serif; */
+   font-weight: 400;
+   font-size: 2.9rem;
+   text-align: center;
+   color: white;
+   text-shadow: 0px 2px black;
+   background-color: #245760;
+ }
+
+ .skills h2 {
+   /* font-family: 'Francois One', sans-serif; */
+   font-weight: 400;
+   font-size: 2.9rem;
+   width: 70%;
+   padding-left: 15px;
+   padding-right: 15px;
+   color: white;
+   text-align: center;
+   text-shadow: 0px 2px black;
+   background-color: #245760;
+   margin-bottom: 20px;
+ }
+
+
+
+/* Footer */
 
 footer {
-  width: 100%;
-  height:400px;
+  background-color: #245760;
+  height: 200px;
+  margin-top: 100px;
+}
+
+
+
+/* General */
+
+strong {
+  font-weight: 500;
 }
