--- a/resume/styles.css
+++ b/resume/styles.css
@@ -10,7 +10,7 @@ html {
 
 body {
   background: rgb(253,255,252);
-  background: linear-gradient(329deg, rgba(253,255,252,1) 0%, rgba(245,255,245,1) 100%);
+  background: linear-gradient(329deg, rgba(253,255,252,1) 0%, rgba(248,255,248,1) 100%);
 
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
@@ -298,5 +298,5 @@ strong {
 }
 
 h2 {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
