--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,12 @@ html {
 
 body {
   background: rgb(253,255,252);
-  background: linear-gradient(329deg, rgba(253,255,252,1) 0%, rgba(248,255,248,1) 100%);
+  background: linear-gradient(329deg, rgba(253,255,252,1) 0%, rgba(245,255,245,1) 100%);
 
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
 }
+
 
 
 
@@ -55,6 +56,7 @@ nav ul li:hover {
 
 
 
+
  /* Header */
 
 .header-bg {
@@ -63,7 +65,10 @@ nav ul li:hover {
   min-height: 375px;
   box-shadow: 0 1px 7px 0 rgba(0,0,0,0.2);
   background-position: right;
-
+  background-image: url(images/geo-pattern.png);
+  background-size: cover;
+  /* border: 7px solid white; */
+  border-radius: 2px;
   overflow: hidden;
   background-image: url(images/rose.png);
   background-repeat: no-repeat;
@@ -118,7 +123,6 @@ nav ul li:hover {
  }
 
 
-
  .experience h3, .education h3 {
    font-size: 1.2rem;
    font-weight: 400;
@@ -127,6 +131,7 @@ nav ul li:hover {
  .experience h4, .education h4 {
    font-size: 1.1rem;
  }
+
 
 
 
@@ -185,8 +190,8 @@ nav ul li:hover {
 
 .lesson {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
   cursor: pointer;
   margin-top: 10px;
 }
@@ -211,23 +216,23 @@ nav ul li:hover {
 
 }
 
-.except {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
  .job {
    padding: 10px 10px 0px 10px;
    margin-bottom: 20px;
    margin-top: 20px;
-
+   min-height: 190px;
  }
+
 
  .title {
    border-bottom: 1px solid #ECF0F1;
  }
+
+.arrow {
+  margin-top: 10px;
+  color: #646A6D;
+  font-size: .6rem;
+}
 
 
 .color1 {
@@ -250,8 +255,6 @@ nav ul li:hover {
 }
 
 
-
-
  /* Section Headings */
 
  .education h2,  .experience h2 {
@@ -261,6 +264,7 @@ nav ul li:hover {
    color: white;
    /* text-shadow: 0px 2px black; */
    background-color: #245760;
+
  }
 
  .skills h2 {
@@ -310,3 +314,20 @@ strong {
 h2 {
   font-family: 'Roboto', sans-serif;
 }
+
+
+
+
+
+
+@media only screen and (max-width: 600px) {
+
+  .skills h2 {
+    width: 90%;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+ }
