--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,6 @@ nav ul li:hover {
   font-size: .6rem;
 }
 
-
 .color1 {
   background-color: rgb(202, 241, 246);
 }
@@ -247,9 +246,11 @@ nav ul li:hover {
 }
 
 .details li {
-  list-style-type: none;
+  list-style-type: disc;
   list-style-position: inside;
   font-size: .9rem;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 
@@ -301,7 +302,7 @@ footer {
 }
 
 footer h3 {
-  font-size: .9rem;
+  font-size: 1rem;
 }
 
 footer p {
